overflow fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .App {
   background-color: white;
-
+  overflow: hidden;
 }
 
 .footer-text{
